--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@heroicons/react": "^1.0.4",
+    "express": "^4.17.1",
+    "isomorphic-fetch": "^3.0.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.0.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "webpack": "^5.52.0"
   }
 }
