--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@badrap/bar-of-progress": "^0.1.2",
+    "@craco/craco": "^6.2.0",
     "@heroicons/react": "^1.0.4",
+    "date-fns": "^2.23.0",
     "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
@@ -19,9 +23,9 @@
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14",
     "webpack": "^5.52.0"
   }
 }
